--- a/cdk/package.json
+++ b/cdk/package.json
@@ -11,20 +11,22 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.125.0",
+    "@aws-cdk/assert": "1.126.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.125.0",
+    "aws-cdk": "1.126.0",
+    "dotenv": "^10.0.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigatewayv2": "^1.125.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.125.0",
-    "@aws-cdk/aws-lambda-go": "^1.125.0",
-    "@aws-cdk/core": "1.125.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.126.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.126.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.126.0",
+    "@aws-cdk/aws-lambda-go": "^1.126.0",
+    "@aws-cdk/core": "1.126.0",
     "path": "^0.12.7",
     "source-map-support": "^0.5.16"
   }
