refactor: changed api stack to use env variables for scopes and made auth optional

--- a/cdk/.env.example
+++ b/cdk/.env.example
@@ -1,3 +1,8 @@
-IDENTITY_PROVIDER=
-IDENTITY_ISSUER_URL=
-IDENTITY_AUDIENCE=[]
+# IDP Information
+IDENTITY_PROVIDER=okta
+IDENTITY_ISSUER_URL=dev-1234.okta.com/oauth2/default
+IDENTITY_AUDIENCE=["api://default"]
+
+# Scopes
+USERS_SCOPES=["user:read", "user:write"]
+ORGANIZATIONS_SCOPES=["org:read", "org:wrtie", "org:admin"]
